// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`active > matches snapshot 1`] = `
<div>
  <button
    aria-pressed="true"
    class="relative overflow-hidden flex items-center justify-center transition-colors duration-200 ease-in-out gap-2 transition-colors duration-300 ease-in-out h-9 rounded-xl px-3 py-2 flex-row transition-colors duration-300 ease-in-out h-9 text-pca-white dark:text-pca-grey-900  bg-pca-grey-900 dark:bg-pca-white hover:bg-pca-grey-800 dark:hover:bg-pca-grey-300 focus:outline-hidden focus:ring-2 focus:ring-pca-grey-300 !bg-gray-200 dark:!bg-gray-600"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none -translate-y-px"
    >
      Toggle
    </span>
  </button>
</div>
`;

exports[`not active > matches snapshot 1`] = `
<div>
  <button
    aria-pressed="false"
    class="relative overflow-hidden flex items-center justify-center transition-colors duration-200 ease-in-out gap-2 transition-colors duration-300 ease-in-out h-9 rounded-xl px-3 py-2 flex-row transition-colors duration-300 ease-in-out h-9 text-pca-white dark:text-pca-grey-900  bg-pca-grey-900 dark:bg-pca-white hover:bg-pca-grey-800 dark:hover:bg-pca-grey-300 focus:outline-hidden focus:ring-2 focus:ring-pca-grey-300"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none -translate-y-px"
    >
      Toggle
    </span>
  </button>
</div>
`;
